--- a/assets/css/hubzero.css
+++ b/assets/css/hubzero.css
@@ -110,6 +110,10 @@ body {
   margin: 20px 0;
   line-height: 1.3; }
 
+.reveal p.instruct {
+	font-size: 0.8em;
+	color: #777;
+}
 /* Ensure certain elements are never larger than the slide itself */
 .reveal img,
 .reveal video,
@@ -129,7 +133,14 @@ body {
 .reveal ul {
   display: inline-block;
   text-align: left;
-  margin: 0 0 0 1em; }
+  margin: 1em 0 0 1em;
+  font-size: 0.8em;
+}
+.reveal ul.list {
+	font-size: 0.6em;
+	margin-top: 2em;
+	line-height: 1.5em;
+}
 
 .reveal ol {
   list-style-type: decimal; }
@@ -455,6 +466,9 @@ body {
 }
 .padded {
 	padding: 0.5em 1em !important;
+}
+.toppadded {
+	padding-top: 3em !important;
 }
 .toppadding {
 	padding-top: 0.8em !important;
