--- a/assets/css/hubzero.css
+++ b/assets/css/hubzero.css
@@ -108,7 +108,8 @@ body {
  *********************************************/
 .reveal p {
   margin: 20px 0;
-  line-height: 1.3; }
+  line-height: 1.3;
+}
 
 .reveal p.instruct {
 	font-size: 0.8em;
